--- a/CSS/style.css
+++ b/CSS/style.css
@@ -15,5 +15,8 @@ img {
 }
 
 hr {
-    
+    border-style: dotted none none;
+    border-color: #3282b8;
+    border-width: thick;
+    width: 10%;
 }
